--- a/main.css
+++ b/main.css
@@ -84,9 +84,13 @@ main {
     padding: 2rem;
 }
 
-#education, #contact, #languages {
+#education, #contact, #languages, #bio {
     text-decoration: none;
     list-style: none;
+}
+
+#bio li {
+    margin-bottom: 10px;
 }
 
 main aside ul li i {
@@ -154,6 +158,7 @@ h3 {
 @media screen and (min-width: 1440px) {
     .page {
         width: 80%;
+        max-width: 1260px;
     }
 }
 
@@ -242,7 +247,7 @@ h3 {
     }
 }
 
-@media screen and (min-width: 320px) and (max-width: 424px) {
+@media screen and (min-width: 220px) and (max-width: 424px) {
     .page {
         width: 100%;
     }
@@ -252,6 +257,10 @@ h3 {
     }
     header ul {
         flex-wrap: wrap;
+        width: 80%;
+    }
+    header ul li {
+        margin-bottom: 10px;
     }
     h1 {
         font-size: 1.6rem;
